create css animation

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <hr />
 
     <div class="container">
-      <a href="#"></a>
+      <a href="#">Hover Me!</a>
     </div>
   </body>
 </html>
